Added fix for chat

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@botpress/channel-web": "^10.31.0",
     "botpress": "^10.31.0",
+    "botpress-analytics": "^2.2.7",
     "jsdoc-api": "^4.0.2",
     "lodash": "^4.17.5",
     "moment": "^2.20.1"
